# TechSprint_6G

./: .gitignore  README.md  Readme.md  main.py
RL_PPO_MODEL/: .gitignore  Readme.md  dataset_pipeline.py  main_demo.py  txt.txt
RL_PPO_MODEL/notebooks/: ga_ppo_spectrum_optimization.ipynb
RL_PPO_MODEL/results/: experiment_summary.txt  ga_ppo_results.json
RL_PPO_MODEL/src/: __init__.py
amcRFIdentifyUI/: config.py  main.py  style.qss
amcRFIdentifyUI/interface/: toolbar.py
amcRFIdentifyUI/logic/: menu_actions.py  onnx_inference.py  radio_actions.py  transmitters.py
cogradio/: .gitignore  COMPLETE_PROJECT_DOCUMENTATION.md  CUDA-SETUP.md  DATA_PIPELINE.md  README.md  TRAINING-GUIDE.md  UV-COMMANDS.md  app.py  debug_datasets.py  debug_shape.py  main.py  package-lock.json  pyproject.toml  run_full_pipeline.py  test_cuda.py  todo.md
cogradio/.github/: copilot-instructions.md
cogradio/docs/implementation/: methodology.md
cogradio/scripts/: __init__.py
cogradio/src/: __init__.py  cli.py  config.py  data_pipeline.py  evaluate.py  ga_optimizer.py  plot_convergence.py  train_agent.py
cogradio/src/6g_cognitive_radio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cogradio/src/envs/: __init__.py  cognitive_radio_env.py
notebooks/: amc_inference.ipynb  amc_training.ipynb  dataset_pipeline.py  ga_ppo_spectrum_optimization.ipynb  rl_dset_genr.ipynb  rl_training.ipynb
src/: __init__.py
src/ui/: README.md  UI_GUIDELINE.md  __init__.py  config.py  main.py  main_dashboard.py  pyproject.toml  style.qss
src/ui/core/: system.py
src/ui/interface/: menu_bar.py  toolbar.py
src/ui/logic/: menu_actions.py  radio_actions.py  toolbar_actions.py
src/ui/widgets/charts/: __init__.py  constellation.py  freqdomain.py  probability.py  qos_metrics.py  rl_visualizer.py  spectrum.py  spectrum_matrix.py  timedomain.py  user_classification.py  waterfall.py
tests/: test_integration_flow.py  test_qos_panel.py  test_qos_panel_empty.py  test_service_mappings.py
(+28 files in other folders)
