[project]
name = "6g-cognitive-radio"
version = "0.1.0"
description = "6G Cognitive Radio Spectrum Allocation using Hybrid GA-RL Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.14.0",
    "torch>=2.5.0",
    "python-dateutil>=2.9.0",
    "plotly>=6.5.1",
    "pygad>=3.5.0",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.1",
    "streamlit>=1.52.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "psutil>=7.2.1",
]

[project.scripts]
# Dataset generation
gen-data = "src.cli:gen_data"

# Training commands
train-baseline = "src.cli:train_baseline"
train-ga = "src.cli:train_ga"
train-quick = "src.cli:train_quick"

# Evaluation & analysis
evaluate = "src.cli:evaluate"
plot-convergence = "src.cli:plot_convergence"

# Full pipeline
pipeline = "src.cli:run_pipeline"
pipeline-quick = "src.cli:run_pipeline_quick"

# Monitoring & demo
tensorboard = "src.cli:tensorboard"
demo = "src.cli:demo"

# Utilities
status = "src.cli:status"
clean = "src.cli:clean"
help = "src.cli:help_cmd"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
# Disable all linting
ignore = ["ALL"]
